--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,10 +17,11 @@ body {
   background-color: #fff;
   margin-bottom: 10px;
   z-index: 9999;
+  display: none;
 }
 canvas {
   transform: translateZ(0);
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   z-index: 1;
 }
