--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -16,9 +16,10 @@ html, body
   background-color white
   margin-bottom 10px
   z-index 9999
+  display none
 
 canvas
   transform translateZ(0)
-  height 100vh
-  width 100vw
+  height 100%
+  width 100%
   z-index 1
